<resources>
    <string name="app_name">Basket Ball App</string>
    <string name="text_team_a">Team A</string>
    <string name="action_3_points">+3 POINTS</string>
    <string name="action_2_points">+2 POINTS</string>
    <string name="action_free_throw">FREE THROW</string>
    <string name="text_team_b">Team B</string>
    <string name="action_reset">reset</string>
    <string name="title_activity_main2">Main2Activity</string>
</resources>
