<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
                name="team"
                type="com.aldana.ejemplo14.ViewModel.ScoreViewModel"/>
    </data>
    <ScrollView android:layout_width="match_parent"
                android:layout_height="match_parent">
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:context=".Activities.MainActivity"
            android:scrollbars="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/small_gap">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/medium_gap"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/team_A"
                    android:gravity="center"
                    android:text="@string/text_team_a"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_score_team_a"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/small_gap"
                    android:gravity="center"
                    android:text="@{team.scoreTeamA}"
                    android:textSize="@dimen/big_text" />


                <Button
                    android:id="@+id/bt_team_a_3_p"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/small_gap"
                    android:text="@string/action_3_points" />

                <Button
                    android:id="@+id/bt_team_a_2_p"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/small_gap"
                    android:text="@string/action_2_points" />

                <Button
                    android:id="@+id/bt_team_a_free_throw"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/small_gap"
                    android:text="@string/action_free_throw" />

            </LinearLayout>

            <View
                    android:layout_width="2dp"
                    android:layout_height="276dp"
                    android:layout_marginLeft="@dimen/medium_gap"
                    android:layout_marginTop="@dimen/medium_gap"
                    android:layout_marginRight="@dimen/medium_gap"
                    android:background="#D8D4D4"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginRight="@dimen/medium_gap"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:id="@+id/team_B"
                    android:text="@string/text_team_b"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_score_team_b"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/small_gap"
                    android:gravity="center"
                    android:text="@{team.scoreTeamB}"
                    android:textSize="@dimen/big_text" />

                <Button
                    android:id="@+id/bt_team_b_3_p"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/small_gap"
                    android:text="@string/action_3_points" />

                <Button
                    android:id="@+id/bt_team_b_2_p"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/small_gap"
                    android:text="@string/action_2_points" />

                <Button
                    android:id="@+id/bt_team_b_free_throw"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/small_gap"
                    android:text="@string/action_free_throw" />

            </LinearLayout>

        </LinearLayout>
        <LinearLayout android:layout_width="match_parent"
                      android:orientation="vertical"
                      android:layout_height="wrap_content"
                      android:gravity="center">
            <TextView android:layout_width="wrap_content"
                      android:text="End time:"
                      android:layout_margin="@dimen/text_margin"
                      android:layout_height="wrap_content"/>
            <TimePicker android:layout_width="wrap_content"
                        android:layout_marginLeft="36dp"
                        android:layout_marginRight="36dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/time_end"
                        android:hint="name of the team"
                        android:visibility="visible" tools:visibility="visible"
                        android:headerBackground="#009688"/>
        </LinearLayout>
        <LinearLayout android:layout_width="wrap_content"
                      android:orientation="horizontal"
                      android:layout_height="wrap_content"
                      android:layout_gravity="center">
            <Button
                android:id="@+id/bt_reset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/medium_gap"
                android:text="@string/action_reset" />
            <Button
                    android:id="@+id/bt_save"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/medium_gap"
                    android:text="save" />
        </LinearLayout>
        </LinearLayout>
    </ScrollView>
</layout>